--- a/src/components/messageItem/index.css
+++ b/src/components/messageItem/index.css
@@ -2,6 +2,7 @@
   display: flex;
   width: auto;
   margin-bottom: 20px;
+  padding: 0 20px;
   border-bottom: 1px solid rgba(142, 141, 141, 0.613);
 }
 
