--- a/src/components/messageItem/index.css
+++ b/src/components/messageItem/index.css
@@ -26,6 +26,7 @@
   justify-content: space-between;
   margin-right: 20px;
   margin-bottom: 10px;
+  cursor: pointer;
 }
 .msg-icons img {
   width: 22px;
