esercizio del giorno

--- a/src/components/messageItem/index.css
+++ b/src/components/messageItem/index.css
@@ -1,7 +1,7 @@
 .MessageItem {
   display: flex;
   width: auto;
-  margin-bottom: 20px;
+  margin-top: 20px;
   padding: 0 20px;
   border-bottom: 1px solid rgba(142, 141, 141, 0.613);
 }
@@ -11,8 +11,9 @@
 }
 .profile-picture {
   width: 60px;
+  height: 60px;
   border-radius: 100%;
-  border: 1px solid black;
+  border: 1px solid rgba(142, 141, 141, 0.613);
   background-color: lightgoldenrodyellow;
 }
 .email {
@@ -26,8 +27,8 @@
   justify-content: space-between;
   margin-right: 20px;
   margin-bottom: 10px;
-  cursor: pointer;
 }
 .msg-icons img {
   width: 22px;
+  cursor: pointer;
 }
