--- a/src/components/bottomMenu/index.css
+++ b/src/components/bottomMenu/index.css
@@ -19,3 +19,25 @@
   width: 30px;
   cursor: pointer;
 }
+
+@media screen and (min-width: 800px) {
+  .BottomMenu {
+    display: none;
+  }
+  /* .BottomMenu {
+    height: 100%;
+    position: fixed;
+    bottom: 0;
+    z-index: 1;
+    width: 25vw;
+    background-color: transparent;
+    border-top: 1px solid rgba(128, 128, 128, 0.5);
+  }
+  .bottonMenu-list {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    list-style-type: none;
+    padding: 0 20px;
+  } */
+}
