--- a/src/components/hamburgerMenu/index.css
+++ b/src/components/hamburgerMenu/index.css
@@ -1,18 +1,70 @@
 .HamburgerMenu {
-  width: 50vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  opacity: 0;
+  pointer-events: none;
+  display: flex;
+}
+.hamburger-area {
+  height: 100%;
+  width: 55vw;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  border-right: 1px solid rgba(128, 128, 128, 0.3);
+}
+
+.user-info {
+  height: 150px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0 15px;
+}
+.user-info p {
+  margin: 0;
+  padding: 3px;
+}
+.user-img {
+  width: 50px;
+  border-radius: 100%;
 }
 
 .HamburgerMenu-list {
-  height: 100vh;
-  width: 60vw;
   display: flex;
   flex-direction: column;
   list-style-type: none;
   justify-content: space-between;
   list-style-type: none;
   padding: 0 20px;
+  gap: 8px;
+  cursor: pointer;
 }
 
 .HamburgerMenu-list img {
   width: 30px;
+}
+.HamburgerMenu-list li {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  font-weight: 600;
+}
+
+.modal {
+  height: 100vh;
+  width: 45vw;
+  background-color: rgba(0, 0, 0, 0.03);
+}
+.show {
+  opacity: 1;
+  pointer-events: all;
+}
+
+@media screen and (min-width: 800px) {
+  .HamburgerMenu {
+    display: none;
+  }
 }
