--- a/src/components/bottomMenu/index.css
+++ b/src/components/bottomMenu/index.css
@@ -5,7 +5,7 @@
   z-index: 4;
   width: 100vw;
   background-color: white;
-  border-top: 1px solid rgba(128, 128, 128, 0.5);
+  border-top: 1px solid rgb(207, 207, 207);
 }
 
 .bottonMenu-list {
@@ -15,8 +15,8 @@
   padding: 0 20px;
 }
 
-.bottonMenu-list img {
-  width: 30px;
+.bottonMenu-list li {
+  font-size: 1.8rem;
   cursor: pointer;
 }
 
@@ -24,20 +24,4 @@
   .BottomMenu {
     display: none;
   }
-  /* .BottomMenu {
-    height: 100%;
-    position: fixed;
-    bottom: 0;
-    z-index: 1;
-    width: 25vw;
-    background-color: transparent;
-    border-top: 1px solid rgba(128, 128, 128, 0.5);
-  }
-  .bottonMenu-list {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    list-style-type: none;
-    padding: 0 20px;
-  } */
 }
