--- a/src/components/content/index.css
+++ b/src/components/content/index.css
@@ -4,6 +4,6 @@
 
 @media screen and (min-width: 800px) {
   .Content {
-    border-right: 1px solid rgba(142, 141, 141, 0.613);
+    border-right: 1px solid rgb(207, 207, 207);
   }
 }
