--- a/src/components/desktopHeader/index.css
+++ b/src/components/desktopHeader/index.css
@@ -9,33 +9,47 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border-bottom: 1px solid rgb(207, 207, 207);
+}
+.title-sec h3 {
+  margin: 10px;
 }
 
-.title-sec img {
+.sparkling {
+  font-size: 1.4rem;
+  cursor: pointer;
+  color: rgb(29, 161, 242);
+}
+
+.search-sec {
+  margin-top: 10px;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  border-bottom: 1px solid rgb(207, 207, 207);
+  padding-bottom: 10px;
+}
+
+.search-sec img {
   width: 30px;
   height: 30px;
 }
-.search-sec {
+.icons {
+  width: 100px;
+  font-size: 1.3rem;
+  color: rgb(29, 161, 242);
   display: flex;
-  gap: 5px;
+  justify-content: space-evenly;
 }
-.user-search-area {
-  height: 45px;
-  width: 45px;
+.chart-icon {
+  rotate: 90deg;
 }
-.search-area {
-  width: 60%;
-  height: 30px;
-  border-radius: 24px;
-  background-color: rgb(225 232 237);
-  border: none;
-  padding: 0 10px;
-  outline: none;
+
+.input-area {
+  display: flex;
+  align-items: center;
 }
-.search-sec img {
-  width: 25px;
-  height: 25px;
-}
+
 @media screen and (min-width: 800px) {
   .DesktopHeader {
     display: flex;
