--- a/src/components/messageItem/index.css
+++ b/src/components/messageItem/index.css
@@ -13,7 +13,7 @@
   width: 60px;
   height: 60px;
   border-radius: 100%;
-  border: 1px solid rgba(142, 141, 141, 0.613);
+  border: 1px solid rgb(207, 207, 207);
   background-color: lightgoldenrodyellow;
 }
 .email {
