--- a/src/components/messagesList/index.css
+++ b/src/components/messagesList/index.css
@@ -1,6 +1,7 @@
 .MessagesList {
   height: 100%;
   width: 100vw;
+  margin-bottom: 60px;
 }
 
 .new-post {
@@ -18,12 +19,13 @@
   cursor: pointer;
 }
 .newpost-img {
-  height: 35px;
-  width: 35px;
+  font-size: 1.9rem;
+  color: white;
 }
 @media screen and (min-width: 800px) {
   .MessagesList {
     width: 45vw;
+    margin-bottom: 0;
   }
   .new-post {
     display: none;
