--- a/src/components/messageItem/index.css
+++ b/src/components/messageItem/index.css
@@ -2,7 +2,7 @@
   display: flex;
   width: auto;
   margin-top: 20px;
-  padding: 0 20px;
+  padding: 0 20px 0 5px;
   border-bottom: 1px solid rgba(142, 141, 141, 0.613);
 }
 
@@ -14,9 +14,10 @@
   height: 60px;
   border-radius: 100%;
   border: 1px solid rgb(207, 207, 207);
-  background-color: lightgoldenrodyellow;
+  background-image: url("https://i.pinimg.com/originals/7b/db/75/7bdb758f3927bc393ff2b2b72d4f4f6d.jpg");
+  background-size: cover;
 }
-.email {
+.username {
   font-style: italic;
   color: grey;
   margin-left: 7px;
@@ -32,3 +33,8 @@
   width: 22px;
   cursor: pointer;
 }
+
+/* .msg-text {
+  color: red;
+  width: 90%;
+} */
