--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,22 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,300;1,500&display=swap");
+
+* {
+  transition: all 0.25s ease;
+}
 body {
   font-family: "Roboto", sans-serif;
+  width: 100vw;
+  overflow: hidden;
+  padding-top: 10px;
 }
 
 @media screen and (min-width: 800px) {
+  body {
+    font-family: "Roboto", sans-serif;
+    width: 100%;
+    overflow: auto;
+    padding-top: 0;
+  }
   .App {
     display: flex;
     width: 100vw;
