--- a/src/components/header/index.css
+++ b/src/components/header/index.css
@@ -1,7 +1,3 @@
-.Header {
-  height: 60px;
-}
-
 .header-list {
   display: flex;
   list-style-type: none;
@@ -15,6 +11,11 @@
   font-size: 1.9rem;
   cursor: pointer;
   color: rgb(29, 161, 242);
+}
+.header-out {
+  transform: translateY(-100px);
+  /* display: none; */
+  height: 0;
 }
 
 @media screen and (min-width: 800px) {
