--- a/src/components/header/index.css
+++ b/src/components/header/index.css
@@ -11,10 +11,11 @@
   font-size: 1.9rem;
   cursor: pointer;
   color: rgb(29, 161, 242);
+  transition: all 0.5s ease;
 }
 .header-out {
   transform: translateY(-100px);
-  /* display: none; */
+  transition: all 0.7s ease;
   height: 0;
 }
 
