--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,300;1,500&display=swap");
 
-* {
+/* * {
   transition: all 0.35s ease;
-}
+} */
 body {
   font-family: "Roboto", sans-serif;
   width: 100vw;
